feat: refatora backend do ciclo de estudos com distribuicao inteligente e lotes de IA